test/classes/delete-free/anymanaged/nilable-anymanaged-member-no-given-value.good
nilable-anymanaged-member-no-given-value.chpl:2: warning: field is declared with generic memory management
note: consider adding 'owned', 'shared', or 'borrowed'
note: if generic memory management is desired, use a 'type' field to store the class type
nilable-anymanaged-member-no-given-value.chpl:7: error: initialization requires an argument for thing2
